paas/gitops/styra/das-init/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: styra-das
  labels:
    kiali.io/member-of: istio-ctlplane-01
    maistra.io/member-of: istio-ctlplane-01
  annotations:
    argocd.argoproj.io/sync-wave: "1"
